创建cell项目
