# api/api.pb.go
@@ -483,19 +483,24 @@ var file_api_api_proto_rawDesc = []byte{
 	0x0a, 0x0d, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x53, 0x79, 0x73, 0x50, 0x6f, 0x73, 0x74, 0x10,
 	0x67, 0x12, 0x11, 0x0a, 0x0d, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x53, 0x79, 0x73, 0x50, 0x6f,
 	0x73, 0x74, 0x10, 0x68, 0x12, 0x11, 0x0a, 0x0d, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x53, 0x79,
-	0x73, 0x50, 0x6f, 0x73, 0x74, 0x10, 0x69, 0x32, 0x49, 0x0a, 0x05, 0x43, 0x68, 0x69, 0x65, 0x66,
-	0x12, 0x40, 0x0a, 0x11, 0x4f, 0x6e, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x52, 0x65, 0x63,
-	0x65, 0x69, 0x76, 0x65, 0x64, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22,
-	0x11, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0b, 0x22, 0x06, 0x2f, 0x63, 0x68, 0x69, 0x65, 0x66, 0x3a,
-	0x01, 0x2a, 0x32, 0x48, 0x0a, 0x06, 0x53, 0x79, 0x73, 0x74, 0x65, 0x6d, 0x12, 0x3e, 0x0a, 0x11,
-	0x4f, 0x6e, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x52, 0x65, 0x63, 0x65, 0x69, 0x76, 0x65,
-	0x64, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x0f, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x09, 0x22, 0x04, 0x2f, 0x73, 0x79, 0x73, 0x3a, 0x01, 0x2a, 0x42, 0x27, 0x5a, 0x25,
-	0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6d, 0x61, 0x72, 0x73, 0x2d,
-	0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x73, 0x2f, 0x6d, 0x61, 0x72, 0x73, 0x2f, 0x61, 0x70,
-	0x69, 0x3b, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x50, 0x6f, 0x73, 0x74, 0x10, 0x69, 0x32, 0x47, 0x0a, 0x04, 0x43, 0x65, 0x6c, 0x6c, 0x12,
+	0x3f, 0x0a, 0x11, 0x4f, 0x6e, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x52, 0x65, 0x63, 0x65,
+	0x69, 0x76, 0x65, 0x64, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x10,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0a, 0x22, 0x05, 0x2f, 0x63, 0x65, 0x6c, 0x6c, 0x3a, 0x01, 0x2a,
+	0x32, 0x49, 0x0a, 0x05, 0x43, 0x68, 0x69, 0x65, 0x66, 0x12, 0x40, 0x0a, 0x11, 0x4f, 0x6e, 0x4d,
+	0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x52, 0x65, 0x63, 0x65, 0x69, 0x76, 0x65, 0x64, 0x12, 0x0c,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x0a, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x11, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0b,
+	0x22, 0x06, 0x2f, 0x63, 0x68, 0x69, 0x65, 0x66, 0x3a, 0x01, 0x2a, 0x32, 0x48, 0x0a, 0x06, 0x53,
+	0x79, 0x73, 0x74, 0x65, 0x6d, 0x12, 0x3e, 0x0a, 0x11, 0x4f, 0x6e, 0x4d, 0x65, 0x73, 0x73, 0x61,
+	0x67, 0x65, 0x52, 0x65, 0x63, 0x65, 0x69, 0x76, 0x65, 0x64, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x52,
+	0x65, 0x70, 0x6c, 0x79, 0x22, 0x0f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x09, 0x22, 0x04, 0x2f, 0x73,
+	0x79, 0x73, 0x3a, 0x01, 0x2a, 0x42, 0x27, 0x5a, 0x25, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2f, 0x6d, 0x61, 0x72, 0x73, 0x2d, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74,
+	0x73, 0x2f, 0x6d, 0x61, 0x72, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x3b, 0x61, 0x70, 0x69, 0x62, 0x06,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -519,12 +524,14 @@ var file_api_api_proto_goTypes = []interface{}{
 }
 var file_api_api_proto_depIdxs = []int32{
 	0, // 0: api.Request.operate:type_name -> api.Operate
-	1, // 1: api.Chief.OnMessageReceived:input_type -> api.Request
-	1, // 2: api.System.OnMessageReceived:input_type -> api.Request
-	2, // 3: api.Chief.OnMessageReceived:output_type -> api.Reply
-	2, // 4: api.System.OnMessageReceived:output_type -> api.Reply
-	3, // [3:5] is the sub-list for method output_type
-	1, // [1:3] is the sub-list for method input_type
+	1, // 1: api.Cell.OnMessageReceived:input_type -> api.Request
+	1, // 2: api.Chief.OnMessageReceived:input_type -> api.Request
+	1, // 3: api.System.OnMessageReceived:input_type -> api.Request
+	2, // 4: api.Cell.OnMessageReceived:output_type -> api.Reply
+	2, // 5: api.Chief.OnMessageReceived:output_type -> api.Reply
+	2, // 6: api.System.OnMessageReceived:output_type -> api.Reply
+	4, // [4:7] is the sub-list for method output_type
+	1, // [1:4] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
 	1, // [1:1] is the sub-list for extension extendee
 	0, // [0:1] is the sub-list for field type_name
@@ -569,7 +576,7 @@ func file_api_api_proto_init() {
 			NumEnums:      1,
 			NumMessages:   2,
 			NumExtensions: 0,
-			NumServices:   2,
+			NumServices:   3,
 		},
 		GoTypes:           file_api_api_proto_goTypes,
 		DependencyIndexes: file_api_api_proto_depIdxs,
