# openapi.yaml
@@ -6,6 +6,24 @@ info:
     title: ""
     version: 0.0.1
 paths:
+    /cell:
+        post:
+            tags:
+                - Cell
+            operationId: Cell_OnMessageReceived
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Request'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Reply'
     /chief:
         post:
             tags:
@@ -69,6 +87,7 @@ components:
                     type: string
                     format: bytes
 tags:
+    - name: Cell
     - name: Chief
     - name: System
       description: '****************************************** UserService *****************************************************'
